--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -3,12 +3,13 @@
 *{
     font-family: 'Noto Sans TC', sans-serif;
     font-style: normal;
+    font-weight: 700;
     line-height: 125%;
-    letter-spacing: 0.2em;
-    text-indent: 0.2em;
+    
 }
 body{
     margin: 0;
+    
     
 }
 #app {
@@ -17,5 +18,7 @@ body{
     text-align: center;
     background-color: $basicEarthColor;
     // height: 634px;
-    // background-color: $basicBlueColor;
+    min-height: 100vh;
+    
+    z-index: -3;
 }
