--- a/src/assets/css/styleGuide.scss
+++ b/src/assets/css/styleGuide.scss
@@ -25,14 +25,23 @@ $gray200Color: #cccccc;
 $gray100Color: #e5e5e5;
 $gray50Color: #f2f2f2;
 $gray40Color: #F5F5F5;
+$gray20Color: #FAFAFA;
 $whiteColor: white;
 
 // 標準色
+$basicGreenColor:#B3B960;
 $basicBlueColor:#204379;
+$grayBlueColor:#A0BCC8;
 $lightBlueColor:#DAE4F1;
 $basicEarthColor:#E2D9D3;
 $basicBrownColor:#B57556;
 $lightPinkColor:rgba(250, 163, 163, 0.91);
+
+// 提示色
+$focusBlueColor:#93BBF9;
+$errorRedColor:#E06D6D;
+
+$textColor2:#212121;
 
 
 $head38:2.375rem; // 38px
