--- a/src/assets/css/components/buttonTemplete.scss
+++ b/src/assets/css/components/buttonTemplete.scss
@@ -8,6 +8,15 @@
     color: white;
     background: $basicBrownColor;
     box-shadow: 0px 0px 20px $lightPinkColor;
+    
     border-radius: 50px;
     @include chartWidth();
+    @include centerRule();
+    margin: 0 auto;
+
+    &.submit{
+        background: $basicBrownColor;
+        box-shadow: 0px 4px 10px rgba(40, 35, 35, 0.35), 0px -4px 10px rgba(255, 255, 255, 0.9);
+    }
 }
+
