--- a/src/assets/css/components/formPage.scss
+++ b/src/assets/css/components/formPage.scss
@@ -56,6 +56,10 @@
             h2{
                 font-size: $head32;
                 color: white;
+                >div:first-child{
+                        padding-bottom: 4px;
+                    
+                }
             }
             .goFormBtn{
                 padding: 2rem 0;
@@ -63,7 +67,7 @@
             }
 
             section{
-                padding: $head24 $word16;
+                padding: 24px 16px  24px 32px;
                 // width: 808px;
                 width: 100%;
                 background: $lightBlueColor;
@@ -98,7 +102,7 @@
                         line-height: 180%;
                         list-style: none;
                         text-align: left;
-                        display: flex;
+                        text-indent: -1.1em;
                         
                         span{
                             font-weight: 700;
@@ -128,17 +132,121 @@
 
 
 .form_bottom_contents{
-    padding: 40px 20px;
-    width: 100%;
-    height: 575px;
-    background: white;
-    border: 2px solid $basicBrownColor;
-    box-shadow: 0px 1px 20px rgba(73, 72, 72, 0.25);
-    border-radius: 1rem;
+    position: relative;
+    padding-bottom: 58px;
+}
+
+.lottery_top_bg{
+    // height: 531px;
+    background: url('../../images/sands_bg.png');
+    background-size: contain;
+
+    .award_shadow{
+        position: relative;
+        width: 100%;
+        height: 121px;
+        border-radius: 20px;
+        background-color: #FAFAFA;
+        .award{
+            width: 100%;
+            background-color: white;
+            height: calc(100% - 9px);
+            border-radius: 20px;
+            font-size: 18px;
+            line-height: 125%;
+            color: #B3B960;
+            padding: 16px 18px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            
+            .one{
+                width: fit-content;
+                padding: 3px 10px;
+                background: #FAFAFA;
+                border: 1px solid #B3B960;
+                border-radius: 50px;
+                font-weight: 400;
+                font-size: $notes12;
+                line-height: 140%;
+                color: #B3B960;
+                align-self:flex-end;
+            }
+        }
     
+        .medal{
+            width: 100%;
+            height: fit-content;
+            position: absolute;
+            top: calc(-78px / 2 + 16.916px);
+            left: 0;
+            right: 0;
+
+            &_text{
+                font-size: 16.916px;
+                line-height: 125%;
+                color: white;
+                position: absolute;
+                top: calc(50% - (16.916px));
+                bottom: 0;
+                left: 0;
+                right: 0;
+            }
+        }
+    }
     
 }
 
+.lottery_botton{
+    padding: 40px 0;
+    .info{
+        width: fit-content;
+        font-size: $head20;
+        line-height: 140%;
+        text-align: center;
+        color: $basicBlueColor;
+        padding-bottom: 20px;
+        margin: 0 auto;
+        position: relative;
+        &_date{
+            color: $basicBrownColor;
+        }
+
+        &::after,&::before{
+            content: '';
+            border: 1px solid $basicBlueColor;
+            position:absolute;
+            height: calc(100% - 20px);
+            top:0;
+            bottom: 0;
+            transform: rotate(-15deg);
+            
+        }
+        &::after{
+            left:-28.85px;
+        }
+        &::before{
+            transform: rotate(15deg);
+            right: -28.85px;
+        }
+    }
+}
+
+.market_bg{
+    padding: 40px 0;
+    background-color: $basicBlueColor;
+    border-radius: 50px 50px 0px 0px;
+    .info{
+        width: fit-content;
+        font-size: $head20;
+        line-height: 200%;
+        text-align: center;
+        @include chartWidth();
+        color: white;
+        margin: 0 auto;
+        padding-bottom: 24px;
+    }
+}
 
 @keyframes circleBg {
     from{
