--- a/src/assets/css/components/formTemplete.scss
+++ b/src/assets/css/components/formTemplete.scss
@@ -79,6 +79,7 @@
                 background-color: white;
                 box-shadow: inset 0 0 0 2px transparent;
                 transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+                
                
                 &:focus{
                     outline: none;
@@ -86,6 +87,7 @@
                     background-color: white;
                     box-shadow: inset 0 0 0 2px $focusBlueColor;
                     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+                   
                 }
                 
                 
@@ -95,7 +97,9 @@
                     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
                     
             }
-                
+
+            
+
             }
             .selectGroup{
                 position: relative;
@@ -122,6 +126,18 @@
             
         }
 
+        /* Chrome, Safari, Edge, Opera */
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+        }
+
+
+        /* Firefox */
+        input[type="number"] {
+        -moz-appearance: textfield;
+        }
         
     }
 
