--- a/src/assets/css/styleGuide.scss
+++ b/src/assets/css/styleGuide.scss
@@ -34,6 +34,7 @@ $basicBlueColor:#204379;
 $grayBlueColor:#A0BCC8;
 $lightBlueColor:#DAE4F1;
 $basicEarthColor:#E2D9D3;
+$darkEarthColor:#D3A995;
 $basicBrownColor:#B57556;
 $lightPinkColor:rgba(250, 163, 163, 0.91);
 
