--- a/src/assets/css/components/buttonTemplete.scss
+++ b/src/assets/css/components/buttonTemplete.scss
@@ -6,17 +6,36 @@
     padding: $word16 $head20;
     font-size: $word18;
     color: white;
-    background: $basicBrownColor;
+    background-color: $basicBrownColor;
     box-shadow: 0px 0px 20px $lightPinkColor;
     
     border-radius: 50px;
     @include chartWidth();
     @include centerRule();
     margin: 0 auto;
-
+    
+    &:active{
+        background-color: $basicEarthColor;
+    }
+    
     &.submit{
         background: $basicBrownColor;
         box-shadow: 0px 4px 10px rgba(40, 35, 35, 0.35), 0px -4px 10px rgba(255, 255, 255, 0.9);
+
+        &:active{
+            background-color: $basicEarthColor;
+        }
+
+        div{
+            font-size: $word18;
+            line-height: 125%;
+            @include chartWidth();
+            color: #FFE3E3;
+            display: flex;
+            img{
+                padding-right: 1rem;
+            }
+        }
     }
 }
 
