--- a/src/assets/css/components/formPage.scss
+++ b/src/assets/css/components/formPage.scss
@@ -3,7 +3,7 @@
 
 .form_top_bg{
     background-color: $basicBlueColor;
-    min-height: 634px;
+    min-height: calc(634px + 110px);
     
     position: relative;
     overflow: hidden;
@@ -125,9 +125,18 @@
 
     
 }
-.curve{
-    height: 110px;
-    background: url('./../../images/waves_bg.png');
+.curve::after{
+    // content: url('./../../images/wave.png');
+    content: '';
+    width: 100%;
+    height:55px ;
+    // outline: 1px solid red;
+    background: url('./../../images/waves.png');
+    background-size: contain;
+    position: absolute;
+    z-index: 6;
+    left: 0;
+    top: calc(634px + 55px + 27.5px);
 }
 
 
